[gd_scene load_steps=48 format=3 uid="uid://c28j7kadkp0y1"]

[ext_resource type="Script" path="res://src/autoload/controlls_guide.gd" id="1_re3y2"]
[ext_resource type="Texture2D" uid="uid://byoar2xmxatd2" path="res://addons/Xelu_Free_Controller&Key_Prompts/Keyboard & Mouse/Light/A_Key_Light.png" id="2_3asuh"]
[ext_resource type="Texture2D" uid="uid://4nt6a1j6xsb7" path="res://addons/Xelu_Free_Controller&Key_Prompts/Keyboard & Mouse/Dark/A_Key_Dark.png" id="3_e0iij"]
[ext_resource type="Texture2D" uid="uid://cvs6w7ympueph" path="res://addons/Xelu_Free_Controller&Key_Prompts/Keyboard & Mouse/Light/S_Key_Light.png" id="4_f0jsd"]
[ext_resource type="Texture2D" uid="uid://dgfumbrjyivk7" path="res://addons/Xelu_Free_Controller&Key_Prompts/Switch/Switch_Dpad_Left.png" id="4_nv6wy"]
[ext_resource type="Texture2D" uid="uid://da6echlkn2av1" path="res://addons/Xelu_Free_Controller&Key_Prompts/Keyboard & Mouse/Dark/S_Key_Dark.png" id="5_6dc3e"]
[ext_resource type="Texture2D" uid="uid://c8rxk3lhuuccr" path="res://addons/Xelu_Free_Controller&Key_Prompts/Switch/Switch_Dpad.png" id="5_mf58a"]
[ext_resource type="Texture2D" uid="uid://cmpu5dw7i2n3y" path="res://addons/Xelu_Free_Controller&Key_Prompts/Keyboard & Mouse/Light/D_Key_Light.png" id="6_sinnu"]
[ext_resource type="Texture2D" uid="uid://dmsw82xqy7o3x" path="res://addons/Xelu_Free_Controller&Key_Prompts/Keyboard & Mouse/Dark/D_Key_Dark.png" id="7_ehyn5"]
[ext_resource type="Texture2D" uid="uid://bga5umx4puefg" path="res://addons/Xelu_Free_Controller&Key_Prompts/Switch/Switch_Dpad_Down.png" id="7_kjubw"]
[ext_resource type="Texture2D" uid="uid://biec5pl2qx5pm" path="res://addons/Xelu_Free_Controller&Key_Prompts/Keyboard & Mouse/Light/W_Key_Light.png" id="8_evh7q"]
[ext_resource type="Texture2D" uid="uid://dyg1dqgq76g4i" path="res://addons/Xelu_Free_Controller&Key_Prompts/Keyboard & Mouse/Dark/W_Key_Dark.png" id="9_jn6kh"]
[ext_resource type="Texture2D" uid="uid://cjtfs20rnq2at" path="res://addons/Xelu_Free_Controller&Key_Prompts/Keyboard & Mouse/Blanks/Blank_White_Mouse.png" id="10_2akc6"]
[ext_resource type="Texture2D" uid="uid://bsxefqyhqkjvu" path="res://addons/Xelu_Free_Controller&Key_Prompts/Switch/Switch_Dpad_Right.png" id="10_k7exw"]
[ext_resource type="Texture2D" uid="uid://c1dfmwka85r5e" path="res://addons/Xelu_Free_Controller&Key_Prompts/Keyboard & Mouse/Light/Mouse_Left_Key_Light.png" id="11_0jlo0"]
[ext_resource type="Texture2D" uid="uid://ct70xhynw8sfn" path="res://addons/Xelu_Free_Controller&Key_Prompts/Keyboard & Mouse/Light/E_Key_Light.png" id="12_15hia"]
[ext_resource type="Texture2D" uid="uid://c3r204ol15l5w" path="res://addons/Xelu_Free_Controller&Key_Prompts/Keyboard & Mouse/Dark/E_Key_Dark.png" id="13_i00lh"]
[ext_resource type="Texture2D" uid="uid://dqnfx0702kuly" path="res://addons/Xelu_Free_Controller&Key_Prompts/Switch/Switch_Dpad_Up.png" id="13_w6nin"]
[ext_resource type="Texture2D" uid="uid://dsyj6iprd2qtc" path="res://addons/Xelu_Free_Controller&Key_Prompts/Switch/Switch_Controllers_Separate.png" id="14_ndnv5"]
[ext_resource type="Texture2D" uid="uid://c3y3mug7iagwh" path="res://addons/Xelu_Free_Controller&Key_Prompts/Switch/Switch_A.png" id="15_r6mdi"]
[ext_resource type="Texture2D" uid="uid://c1aryshox02op" path="res://addons/Xelu_Free_Controller&Key_Prompts/PS4/PS4_Diagram_Flat.png" id="16_u2f4a"]
[ext_resource type="Texture2D" uid="uid://blcwbqqaiwkba" path="res://addons/Xelu_Free_Controller&Key_Prompts/PS4/PS4_Circle.png" id="17_5a8nm"]
[ext_resource type="Texture2D" uid="uid://ci1hv256j877g" path="res://addons/Xelu_Free_Controller&Key_Prompts/Xbox Series X/XboxSeriesX_Diagram_Flat.png" id="18_efvia"]
[ext_resource type="Texture2D" uid="uid://xtshp5bjhdc6" path="res://addons/Xelu_Free_Controller&Key_Prompts/Xbox One/XboxOne_B.png" id="19_71o1w"]

[sub_resource type="AnimatedTexture" id="AnimatedTexture_ssgm8"]
frames = 2
frame_0/texture = ExtResource("2_3asuh")
frame_0/duration = 0.5
frame_1/texture = ExtResource("3_e0iij")
frame_1/duration = 0.3

[sub_resource type="AnimatedTexture" id="AnimatedTexture_qb12y"]
frames = 2
frame_0/texture = ExtResource("4_nv6wy")
frame_0/duration = 0.5
frame_1/texture = ExtResource("5_mf58a")
frame_1/duration = 0.3

[sub_resource type="AnimatedTexture" id="AnimatedTexture_5vr5k"]
frames = 2
frame_0/texture = ExtResource("4_f0jsd")
frame_0/duration = 0.5
frame_1/texture = ExtResource("5_6dc3e")
frame_1/duration = 0.3

[sub_resource type="AnimatedTexture" id="AnimatedTexture_0e84b"]
frames = 2
frame_0/texture = ExtResource("7_kjubw")
frame_0/duration = 0.5
frame_1/texture = ExtResource("5_mf58a")
frame_1/duration = 0.3

[sub_resource type="AnimatedTexture" id="AnimatedTexture_0etjx"]
frames = 2
frame_0/texture = ExtResource("6_sinnu")
frame_0/duration = 0.5
frame_1/texture = ExtResource("7_ehyn5")
frame_1/duration = 0.3

[sub_resource type="AnimatedTexture" id="AnimatedTexture_5tili"]
frames = 2
frame_0/texture = ExtResource("10_k7exw")
frame_0/duration = 0.5
frame_1/texture = ExtResource("5_mf58a")
frame_1/duration = 0.3

[sub_resource type="AnimatedTexture" id="AnimatedTexture_d4vb3"]
frames = 2
frame_0/texture = ExtResource("8_evh7q")
frame_0/duration = 0.5
frame_1/texture = ExtResource("9_jn6kh")
frame_1/duration = 0.3

[sub_resource type="AnimatedTexture" id="AnimatedTexture_hsun8"]
frames = 2
frame_0/texture = ExtResource("13_w6nin")
frame_0/duration = 0.5
frame_1/texture = ExtResource("5_mf58a")
frame_1/duration = 0.3

[sub_resource type="Animation" id="Animation_4eetm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ArrowKeys:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ArrowKeys:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ejm1x"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ArrowKeys:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ArrowKeys:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4d3d2"]
_data = {
"RESET": SubResource("Animation_4eetm"),
"fade_in": SubResource("Animation_ejm1x")
}

[sub_resource type="AnimatedTexture" id="AnimatedTexture_8h1el"]
frames = 2
frame_0/texture = ExtResource("10_2akc6")
frame_0/duration = 0.5
frame_1/texture = ExtResource("11_0jlo0")
frame_1/duration = 0.3

[sub_resource type="AnimatedTexture" id="AnimatedTexture_dbxhw"]
frames = 2
frame_0/texture = ExtResource("12_15hia")
frame_0/duration = 0.5
frame_1/texture = ExtResource("13_i00lh")
frame_1/duration = 0.3

[sub_resource type="Animation" id="Animation_gf2ka"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%SwitchA:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%Ps4Circle:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("%XboxSeriesXB:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_81w21"]
resource_name = "press_loop"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%SwitchA:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.497474, 0.497474, 0.497474, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%Ps4Circle:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.497474, 0.497474, 0.497474, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("%XboxSeriesXB:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.497474, 0.497474, 0.497474, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xd4c3"]
_data = {
"RESET": SubResource("Animation_gf2ka"),
"press_loop": SubResource("Animation_81w21")
}

[sub_resource type="SystemFont" id="SystemFont_e5myo"]
font_names = PackedStringArray("Monospace")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_maadi"]
fallbacks = Array[Font]([SubResource("SystemFont_e5myo")])
font_names = PackedStringArray("Consolas")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_pdjde"]
fallbacks = Array[Font]([SubResource("SystemFont_maadi")])
font_names = PackedStringArray("Hack Nerd Font")
font_weight = 999
generate_mipmaps = true
oversampling = 3.7

[sub_resource type="LabelSettings" id="LabelSettings_f0vc3"]
font = SubResource("SystemFont_pdjde")
font_size = 24
font_color = Color(0.466667, 0.32549, 0.588235, 1)
outline_size = 6
outline_color = Color(0.165237, 0.1577, 0.19, 1)

[sub_resource type="Animation" id="Animation_dx18p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_80i7g"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t24b2"]
_data = {
"RESET": SubResource("Animation_dx18p"),
"fade_in": SubResource("Animation_80i7g")
}

[node name="ControllsGuide" type="Node2D"]
z_index = 3
script = ExtResource("1_re3y2")
fade_threshhold = 0.2
fade_intensity = 0.15

[node name="ArrowKeys" type="Node2D" parent="."]
unique_name_in_owner = true
visible = false
scale = Vector2(0.5, 0.5)

[node name="ArrowLeftKey" type="Sprite2D" parent="ArrowKeys"]
unique_name_in_owner = true
position = Vector2(-76, -1)
texture = SubResource("AnimatedTexture_ssgm8")

[node name="SwitchDpadLeft" type="Sprite2D" parent="ArrowKeys/ArrowLeftKey"]
unique_name_in_owner = true
visible = false
position = Vector2(-20, 427)
texture = SubResource("AnimatedTexture_qb12y")

[node name="ArrowDownKey" type="Sprite2D" parent="ArrowKeys"]
unique_name_in_owner = true
position = Vector2(0, -1)
texture = SubResource("AnimatedTexture_5vr5k")

[node name="SwitchDpadDown" type="Sprite2D" parent="ArrowKeys/ArrowDownKey"]
unique_name_in_owner = true
visible = false
position = Vector2(0, 427)
texture = SubResource("AnimatedTexture_0e84b")

[node name="ArrowRightKey" type="Sprite2D" parent="ArrowKeys"]
unique_name_in_owner = true
position = Vector2(76, -1)
texture = SubResource("AnimatedTexture_0etjx")

[node name="SwitchDpadRight" type="Sprite2D" parent="ArrowKeys/ArrowRightKey"]
unique_name_in_owner = true
visible = false
position = Vector2(18, 425)
texture = SubResource("AnimatedTexture_5tili")

[node name="ArrowUpKey" type="Sprite2D" parent="ArrowKeys"]
unique_name_in_owner = true
position = Vector2(-1, -75)
texture = SubResource("AnimatedTexture_d4vb3")

[node name="SwitchDpadUp" type="Sprite2D" parent="ArrowKeys/ArrowUpKey"]
unique_name_in_owner = true
visible = false
position = Vector2(1, 403)
texture = SubResource("AnimatedTexture_hsun8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="ArrowKeys"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_4d3d2")
}
speed_scale = 0.5

[node name="AttackKeys" type="Node2D" parent="."]
unique_name_in_owner = true
visible = false

[node name="CenterContainer" type="CenterContainer" parent="AttackKeys"]
custom_minimum_size = Vector2(928, 100)
offset_right = 204.0
offset_bottom = 100.0
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(-464, -50)

[node name="HBoxContainer" type="HBoxContainer" parent="AttackKeys/CenterContainer"]
layout_mode = 2

[node name="LeftMouseKey" type="TextureRect" parent="AttackKeys/CenterContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("AnimatedTexture_8h1el")

[node name="EKey" type="TextureRect" parent="AttackKeys/CenterContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("AnimatedTexture_dbxhw")

[node name="Console" type="HBoxContainer" parent="AttackKeys/CenterContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 2

[node name="SwitchIcon" type="TextureRect" parent="AttackKeys/CenterContainer/HBoxContainer/Console"]
visible = false
self_modulate = Color(0.164706, 0.156863, 0.188235, 1)
layout_mode = 2
texture = ExtResource("14_ndnv5")

[node name="SwitchA" type="TextureRect" parent="AttackKeys/CenterContainer/HBoxContainer/Console"]
unique_name_in_owner = true
visible = false
layout_mode = 2
texture = ExtResource("15_r6mdi")

[node name="Ps4Diagram" type="TextureRect" parent="AttackKeys/CenterContainer/HBoxContainer/Console"]
visible = false
self_modulate = Color(0.34, 0.34, 0.34, 1)
custom_minimum_size = Vector2(150, 100)
layout_mode = 2
texture = ExtResource("16_u2f4a")
expand_mode = 1

[node name="Ps4Circle" type="TextureRect" parent="AttackKeys/CenterContainer/HBoxContainer/Console"]
unique_name_in_owner = true
visible = false
layout_mode = 2
texture = ExtResource("17_5a8nm")

[node name="XboxSeriesXDiagram" type="TextureRect" parent="AttackKeys/CenterContainer/HBoxContainer/Console"]
visible = false
self_modulate = Color(0.34, 0.34, 0.34, 1)
custom_minimum_size = Vector2(150, 100)
layout_mode = 2
texture = ExtResource("18_efvia")
expand_mode = 1

[node name="XboxSeriesXB" type="TextureRect" parent="AttackKeys/CenterContainer/HBoxContainer/Console"]
unique_name_in_owner = true
visible = false
layout_mode = 2
texture = ExtResource("19_71o1w")

[node name="AnimationPlayer" type="AnimationPlayer" parent="AttackKeys/CenterContainer/HBoxContainer"]
libraries = {
"": SubResource("AnimationLibrary_xd4c3")
}
autoplay = "press_loop"

[node name="Label" type="Label" parent="AttackKeys"]
offset_left = -42.0
offset_top = 30.0
offset_right = 45.0
offset_bottom = 59.0
text = "ATTACK"
label_settings = SubResource("LabelSettings_f0vc3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="AttackKeys"]
libraries = {
"": SubResource("AnimationLibrary_t24b2")
}
speed_scale = 0.5
